
  * OMutexStream:
        new class offering mutex protected ostream operations.

  * Process:
        - The mode parameter defined for the second through fourth constructor
            must be a Process::IOMode value. The same applies to the function
            call operator previously accespting a size_t argument.
        - cerr() is replaced by childErrStream()

  * RandBuf:
        - expects a size_t seed (used to be: long seed);
        - fixed a memory leak

  * Selector:
        - wait() returns 0 when its read, write and except file descriptor
            sets are empty.

  * SyslogBuf:
        - disontinued the Syslogbuf(char const *, ... ) constructor
        - open() is replaced by reset()
        - close() is replaced by eoi(), alternatively the eoi manipulator can
            be inserted into Syslogbuf's std::ostream

  * SyslogStream:
        - disontinued the SyslogStream(char const *, ... ) constructor

  * Fixed flaw in Log's FBB::fnl handling


bobcat (4.09.00)

  * The class Log unconditionally inserts level-free messages; level
    objects may be inserted anywhere in insertion statements.

  * The Log and level man pages were updated accordingly.

  * The class DateTime was completely rewritten, using a Pimpl approach using
    the this-pointer instead of a separate data member.

  * The members 'int pSync()', defined in IOStreambuf, LogBuffer,
    MultiStreambuf, OFdStreambuf, OFoldStreambuf, OHexStreambuf, Syslogbuf,
    and TableBuf are superfluous. They still exists (as private members), but
    throw an FBB::Exception{ 1 } when called, and are removed at the next
    major bobcat release. Man-pages were updated accordingly.

  * The member `std::streamsize pXsputn(...)' defined in IOStreambuf is
    superfluous. 

  * Overridding members declared as 'virtual' are now declared as 'override'.

  * Added the overriding members `xsputn' to OfdStreambuf and Syslogbuf

  * Updated the Pattern man-page
