@@ -1,6 +1,0 @@
-
-inline std::ostream &eoi(std::ostream &str)
-{
-    return str;
-}
-
