@@ -2,7 +2,7 @@
 
 int Process::eoi()
 {
-    *this << FBB::eoi;
+    eoi_();                     // *this << FBB::eoi;
     return exitStatus();
 }
 
