@@ -1,0 +1,11 @@
+#include "process.ih"
+
+void Process::eoi_()
+{
+    if (active())
+    {
+        close();
+        d_data->d_exitStatus = waitForChild();
+    }
+}
+
